# Find-FireBalls

./: .gitignore  CMakeLists.txt  LICENSE  README
src/: CMakeLists.txt  CmdOpt.cpp  CmdOpt.hpp  FFB.cpp  FFB.hpp  FireballFinder.cpp  FireballFinder.hpp  TimeSpace.cpp  TimeSpace.hpp  VideoBond.cpp  VideoBond.hpp  VideoPartition.cpp  VideoPartition.hpp  VideoPartitioner.cpp  VideoPartitioner.hpp
